kubernetes/go-web-api-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idebrody-go-web-api
  labels:
    app.kubernetes.io/name: idebrody-go-web-api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: idebrody-go-web-api
      app.kubernetes.io/name: idebrody-go-web-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: idebrody-go-web-api
        app.kubernetes.io/name: idebrody-go-web-api
    spec:
      containers:
      - name: idebrody-go-web-api
        image: idebrody/go-web-api
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        readinessProbe:
          periodSeconds: 5
          httpGet:
            scheme: HTTP
            path: /readiness
            port: 8080
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        ports:
        - containerPort: 8080
          name: http
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: idebrody-go-web-api
  labels:
    app: idebrody-go-web-api
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app.kubernetes.io/instance: idebrody-go-web-api
    app.kubernetes.io/name: idebrody-go-web-api  
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-idebrody-go-web-api
spec:
  rules:
  - host: go-web-api.dev.engineering.somecompany.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: idebrody-go-web-api 
            port:
              number: 80
  ingressClassName: nginx
